--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,33 +3,33 @@ version: "3"
 services:
 
   scylla-node1:
-    image: scylladb/scylla:4.4.0
+    image: scylladb/scylla:4.4.6
     restart: always
     command: --seeds=scylla-node1,scylla-node2 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
     volumes:
-      - "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
-      - "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
-      - "./scylla/mutant-data.txt:/mutant-data.txt"
+      - "./pkg/scylla/scylla.yaml:/etc/scylla/scylla.yaml"
+      - "./pkg/scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
+      - "./pkg/scylla/mutant-data.txt:/mutant-data.txt"
     networks:
       web:
 
   scylla-node2:
-    image: scylladb/scylla:4.4.0
+    image: scylladb/scylla:4.4.6
     restart: always
     command: --seeds=scylla-node1,scylla-node2 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
     volumes:
-      - "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
-      - "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
+      - "./pkg/scylla/scylla.yaml:/etc/scylla/scylla.yaml"
+      - "./pkg/scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
     networks:
       web:
 
   scylla-node3:
-    image: scylladb/scylla:4.4.0
+    image: scylladb/scylla:4.4.6
     restart: always
     command: --seeds=scylla-node1,scylla-node2 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
     volumes:
-      - "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
-      - "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
+      - "./pkg/scylla/scylla.yaml:/etc/scylla/scylla.yaml"
+      - "./pkg/scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
     networks:
       web:
 
